--- a/SNEditor/Editors/WorldEditor/WorldEditorView.xaml
+++ b/SNEditor/Editors/WorldEditor/WorldEditorView.xaml
@@ -4,17 +4,22 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:local="clr-namespace:SNEditor.Editors"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d"
-             xmlns:utl="clr-namespace:SNEditor.Utilities" xmlns:gameproject="clr-namespace:SNEditor.GameProject" d:DataContext="{d:DesignInstance Type=gameproject:Project}"
+             mc:Ignorable="d" Focusable="True"
+             xmlns:utl="clr-namespace:SNEditor.Utilities"
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.InputBindings>
+        <KeyBinding Command="{Binding UndoCommand}" Key="Z" Modifiers="Ctrl"/>
+        <KeyBinding Command="{Binding RedoCommand}" Key="Y" Modifiers="Ctrl"/>
+        <KeyBinding Command="{Binding SaveCommand}" Key="S" Modifiers="Ctrl"/>
+    </UserControl.InputBindings>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="32"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal">
-            <Button Content="Undo" Command="{Binding Undo}"/>
-            <Button Content="Redo" Command="{Binding Redo}" Margin=" 32,0,0,0"/>
+            <Button Content="Undo" Command="{Binding UndoCommand}"/>
+            <Button Content="Redo" Command="{Binding RedoCommand}" Margin=" 32,0,0,0"/>
         </StackPanel>
         <Grid Grid.Row="1">
         <Grid.ColumnDefinitions>
@@ -27,7 +32,7 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <GridSplitter Grid.Row="1" Height="5" HorizontalAlignment="Stretch" VerticalAlignment="Top"/>
-                <utl:UndoRedoView DataContext="{Binding UndoRedo}" Grid.Row="1" Loaded="UndoRedoView_Loaded"/>
+                <utl:UndoRedoView DataContext="{Binding UndoRedo}" Grid.Row="1"/>
             </Grid>
         <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Left"
                       VerticalAlignment="Stretch"/>
@@ -37,7 +42,8 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <GridSplitter Grid.Row="1" Height="5" HorizontalAlignment="Stretch" VerticalAlignment="Top"/>
-                <local:ProjectLayoutView/> 
+                <local:ProjectLayoutView/>
+                <local:GameEntityView Grid.Row="1"/>
             </Grid>
         </Grid>
     </Grid>
