--- a/SNEditor/GameProject/ProjectBrowserDialog.xaml
+++ b/SNEditor/GameProject/ProjectBrowserDialog.xaml
@@ -20,7 +20,7 @@
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Grid.Row="1" x:Name="browserContent">
-            <local:OpenProjectView/>
+            <local:OpenProjectView x:Name="openProjectView"/>
             <local:NewProjectView/>
         </StackPanel>
     </Grid>
