--- a/SNEditor/Editors/WorldEditor/GameEntityView.xaml
+++ b/SNEditor/Editors/WorldEditor/GameEntityView.xaml
@@ -38,14 +38,14 @@
                 <ColumnDefinition/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <TextBlock Text="Name" Grid.Column="0" Margin="5,0,0,0"/>
-            <!-- Make Dependency Property to Bind Command To TextBox... Using Tag as Workaround -->
-            <TextBox Text="{Binding Name}" Grid.Column="1" Tag="{Binding RenameCommand}"/>
+                <TextBlock Text="Name" Grid.Column="0" Margin="5,0,0,0"/>
+                <TextBox Text="{Binding Name, UpdateSourceTrigger=Explicit}" Grid.Column="1"
+                         GotKeyboardFocus="OnName_TextBox_GotKeyboardFocus"
+                         LostKeyboardFocus="OnName_TextBox_LostKeyboardFocus"/>
             <StackPanel Orientation="Horizontal" Grid.Column="2">
                 <TextBlock Text="Enabled" Margin="5,0,0,0"/>
                 <CheckBox IsChecked="{Binding IsEnabled, Mode=OneWay}"
-                          Command="{Binding IsEnabledCommand}"
-                          CommandParameter="{Binding IsChecked, RelativeSource={RelativeSource Self}}"
+                          Click="OnIsEnabled_Checkbox_Click"
                           Margin="5,0" VerticalAlignment="Center"/>
             </StackPanel>
         </Grid>
