--- a/SNEditor/GameProject/NewProjectView.xaml
+++ b/SNEditor/GameProject/NewProjectView.xaml
@@ -25,7 +25,8 @@
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
                             <Image Source="{Binding Icon}" Margin="0,0,5,0"/>
-                            <TextBlock Text="{Binding ProjectType}"/>
+                            <TextBlock Text="{Binding ProjectType}" FontSize="20" FontFamily="Bahnschrift condensed"
+                                       VerticalAlignment="Center"/>
                         </StackPanel> 
                     </DataTemplate>
                 </ListBox.ItemTemplate> 
